--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+$background: #53354A;
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: none;
+}
+
+body {
+  min-height: 100vh;
+  background-color: $background;
+}
