--- a/src/app/common/nav-bar/nav-bar.component.html
+++ b/src/app/common/nav-bar/nav-bar.component.html
@@ -1,8 +1,10 @@
 <div class="container-nav">
+  <i class="fas fa-bars"></i>
   <div class="container-logo">
     <img src="./assets/img/logo.png" alt="logo">
   </div>
   <ul class="links">
+    <i class="fas fa-times"></i>
     <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
     <li><a routerLink="/rent" routerLinkActive="active">Rent</a></li>
     <li><a routerLink="/my-rent" routerLinkActive="active">My Rent</a></li>
