--- a/src/app/common/nav-bar/nav-bar.component.scss
+++ b/src/app/common/nav-bar/nav-bar.component.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 $light: 300;
 $regular: 400;
@@ -6,8 +6,8 @@ $medium: 500;
 $semiBold: 600;
 $bold: 700;
 
-$font-color: #FFFF;
-$background: #2B2E4A;
+$font-color: #ffff;
+$background: #2b2e4a;
 
 .container-nav {
   width: 100%;
@@ -16,6 +16,10 @@ $background: #2B2E4A;
   justify-content: space-between;
   background-color: $background;
   padding: 10px 0;
+
+  .fa-bars {
+    display: none;
+  }
 
   .container-logo {
     width: 95px;
@@ -28,6 +32,9 @@ $background: #2B2E4A;
 
   .links {
     display: flex;
+    .fa-times {
+      display: none;
+    }
     li {
       list-style: none;
       a {
@@ -58,6 +65,37 @@ $background: #2B2E4A;
       width: 100%;
       border-radius: 50%;
       cursor: pointer;
+    }
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .container-nav {
+    .fa-bars {
+      display: block;
+    }
+
+    .links {
+      position: fixed;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      background: black;
+      height: 100%;
+      bottom: 0;
+      justify-content: center;
+
+      li {
+        margin: 20px 0!important;
+      }
+
+      i {
+        color: $font-color;
+        font-size: 25px;
+        position: relative;
+        bottom: 28%;
+        left: 38%;
+      }
     }
   }
 }
